# colony-counter

./: .gitignore  README.md  pyproject.toml  requirements.txt
colony_counter.egg-info/: PKG-INFO  SOURCES.txt
configs/: colony.yaml  inference.yaml
src/: config.py  utils.py
src/app/: predictor.py  preprocessing.py
src/data/: split.py  yolo_class_conversion.py
src/ml/: evaluate_yolo_counts.py  evaluate_yolo_counts_grid.py  evaluate_yolo_counts_grid_v8s.py  evaluate_yolo_final.py  evaluate_yolov8s_final.py  inference.py  make_demo_examples.py  visualize_worst_cases.py
src/model_evaluation/: compare_methods.py  evaluate_contour_counts.py  evaluate_counting.py  tune_counting.py
src/preprocessing/: counting.py  validation.py
