[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "colony-counter"
version = "0.1.0"
description = "YOLO-based bacterial colony counter"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]